@startuml

    class GomokuBoard {
        -board: String[][]
        +GomokuBoard()
        +reset()
        +placePiece(row: int, col: int, side: String)
        +getCell(row: int, col: int)
        +getBoardState()
    }

    class GomokuFactory {
        +createBoard()
        +createRule()
        +createPlayer(name: String, side: String)
    }

    class GomokuGameUI extends JFrame{
        -board: GameBoard
        -rule: GameRule
        -player1: Player
        -player2: Player
        -currentPlayer: Player
        -gameOver: boolean
        -SIZE: int
        -CELL_SIZE: int
        +GomokuGameUI(factory: GameFactory)
    }

    class GomokuRule {
            +checkWin(board: String[][], side: String)
            -checkDirection(board: String[][], side: String, r: int, c: int, dr: int, dc: int)
    }


    class OthelloBoard{
        -SIZE: int
        -board: String[][]
        +OthelloBoard()
        +reset()
        +placePiece(row: int, col: int, side: String)
        +canPlacePiece(row: int, col: int, side: String)
        +getCell(row: int, col: int)
        +getBoardState()
    }

    class OthelloFactory {
        +createBoard()
        +createRule()
        +createPlayer(name: String, side: String)
    }

    class OthelloGameUI extends JFrame {
        -board: GameBoard
        -rule: OthelloRule
        -player1: Player
        -player2: Player
        -currentPlayer: Player
        -gameOver: boolean
        -SIZE: int
        -CELL_SIZE: int
        +OthelloGameUI(factory: GameFactory)
        +switchTurnOrEnd(panel: JPanel)
    }

    class OthelloRule {
        +checkWin(board: String[][], side: String)
        +hasAnyValidMoves(board: String[][], side: String)
        +countPiece(board: String[][], side: String)
        +getWinner(board: String[][])
    }


    class GamePanel {
        +paintComponent(g: Graphics)
    }

    class Player {
        +name: String
        +side: String
    }

    GomokuFactory ..> Player : creates
    OthelloFactory ..> Player : creates

    GomokuGameUI ..> GomokuBoard : uses
    OthelloGameUI ..> OthelloBoard : uses
    GomokuGameUI ..> GomokuRule : uses
    OthelloGameUI ..> OthelloRule : uses

    GamePanel --|> JPanel
    GomokuGameUI *-- GamePanel
    OthelloGameUI *-- GamePanel



@enduml